# server/openapi/openapi.yaml
@@ -253,9 +253,7 @@ paths:
           $ref: "#/components/responses/ErrorResponse"
         "422":
           $ref: "#/components/responses/ErrorResponse"
-        "502":
-          $ref: "#/components/responses/ErrorResponse"
-        "504":
+        "503":
           $ref: "#/components/responses/ErrorResponse"
   /api/v1/admin/users:
     get:
